--- a/src/main/resources/static/app/component/popup/create-new-good/createnewgood.html
+++ b/src/main/resources/static/app/component/popup/create-new-good/createnewgood.html
@@ -53,12 +53,11 @@
 
                 <div class="form-group">
                     <label for="goodUnit" class="control-label">Unit</label>
-                    <div class="input-form">
-                        <input type="text" class="" id="goodUnit"
-                               ng-model="unit" placeholder="Enter unit ...">
-                    </div>
+                    <select ng-model="selectedUnit" ng-options="x.unitName for x in listUnitType"
+                                ng-change="showSelect(selectedUnit)"></select>
+                        <a class="create-type-link" ng-click="createProvider()">Create New Unit</a>
                 </div>
-
+                
                 <div class="form-group">
                     <label for="goodPrice" class="control-label">Price</label>
                     <div class="input-form">
