--- a/src/main/resources/static/app/component/popup/create-provider/createprovider.html
+++ b/src/main/resources/static/app/component/popup/create-provider/createprovider.html
@@ -6,7 +6,7 @@
 
         <form class="create-form">
             <div class="form-group">
-                <label for="providerName" class="control-label">Type's Name</label>
+                <label for="providerName" class="control-label">Provider's Name</label>
                 <div class="input-form">
                     <input type="text" class="" id="providerName"
                            ng-model="providerName" placeholder="Enter provider name ...">
@@ -14,7 +14,7 @@
             </div>
 
             <div class="form-group">
-                <label for="phoneNumber" class="control-label">Code</label>
+                <label for="phoneNumber" class="control-label">Phone Number</label>
                 <div class="input-form">
                     <input type="text" class="" id="phoneNumber"
                            ng-model="phoneNumber" placeholder="Enter phone number ...">
@@ -22,7 +22,7 @@
             </div>
 
             <div class="form-group">
-                <label for="address" class="control-label">Description</label>
+                <label for="address" class="control-label">Address</label>
                 <div class="input-form">
                     <input type="text" class="" id="address"
                            ng-model="address" placeholder="Enter address ...">
@@ -30,7 +30,7 @@
             </div>
 
             <div class="form-group">
-                <label for="vote" class="control-label">Code</label>
+                <label for="vote" class="control-label">Vote</label>
                 <div class="input-form">
                     <input type="text" class="" id="vote"
                            ng-model="vote" placeholder="Enter vote ...">
