--- a/src/main/resources/static/app/component/popup/edit-import-good/editimportgood.html
+++ b/src/main/resources/static/app/component/popup/edit-import-good/editimportgood.html
@@ -17,7 +17,7 @@
                 <div class="form-group">
                     <label for="goodName" class="control-label">Good's name</label>
                     <div class="input-form">
-                        <input type="text" class="" id="goodName" ng-model="editObject	"
+                        <input type="text" class="" id="goodName" ng-model="editName"
                                placeholder="Enter name ...">
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <label class="control-label">Type</label>
                     <div class="">
-                        <select ng-model="editObject.name"
+                        <select ng-model="editType"
                                 ng-options="x.goodTypeName for x in listGoodType"
                                 ng-change="showSelect(selectedTypeName)"></select> <a
                             class="create-type-link" ng-click="createNewGoodType()">Create
@@ -36,9 +36,10 @@
                 <div class="form-group">
                     <label class="control-label">Provider</label>
                     <div class="">
-                        <select ng-model="selectedProvider"
+                        <select ng-model="editProvider"
                                 ng-options="x.providerName for x in listProvider"
-                                ng-change="showSelect(selectedProvider)"></select> <a
+                                ng-change="showSelect(selectedProvider)"
+                                ng-init="editProvider='1'"></select> <a
                             class="create-type-link" ng-click="createProvider()">Create
                         New Provider</a>
                     </div>
@@ -47,14 +48,14 @@
                 <div class="form-group">
                     <label for="goodCode" class="control-label">Code</label>
                     <div class="input-form">
-                        <input type="text" class="" id="goodCode" ng-model="code"
+                        <input type="text" class="" id="goodCode" ng-model="editCode"
                                placeholder="Enter code ...">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label">Unit</label> <select
-                        ng-model="selectedUnit"
+                        ng-model="editUnit"
                         ng-options="x.unitName for x in listUnitType"
                         ng-change="showSelect(selectedUnit)"></select> <a
                         class="create-type-link" ng-click="createUnit()">Create
@@ -62,10 +63,26 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="goodPrice" class="control-label">Price</label>
+                    <label for="goodPrice" class="control-label">Import Price</label>
                     <div class="input-form">
-                        <input type="text" class="" id="goodPrice" ng-model="price"
+                        <input type="text" class="" id="goodPrice" ng-model="editPrice"
                                placeholder="Enter price ...">
+                    </div>
+                </div>
+                
+                 <div class="form-group">
+                    <label for="goodExportPrice" class="control-label">Export Price</label>
+                    <div class="input-form">
+                        <input type="text" class="" id="goodExportPrice" ng-model="editExportPrice"
+                               placeholder="Enter price ...">
+                    </div>
+                </div>
+                
+                 <div class="form-group">
+                    <label for="quantity" class="control-label">Quantity</label>
+                    <div class="input-form">
+                        <input type="text" class="" id="quantity" ng-model="quantity"
+                               placeholder="Enter Quantity ...">
                     </div>
                 </div>
 
